--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
       <link rel="stylesheet" href="css/normalize.css">
       <link id="1" rel="stylesheet" href="sass/sassy.css">
-      <link id="2" rel="stylesheet" href="sass/sassy2.css">
+      <link rel="stylesheet" href="css/application.css">
+      <!-- <link id="2" rel="stylesheet" href="sass/sassy2.css"> -->
   </head>
   <body class="flex">
     <form class="flex">
